deploy: 304603a4f59a91aa88d10e683451b64c8fe12998

--- a/oefeningen.html
+++ b/oefeningen.html
@@ -477,8 +477,11 @@
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
 </ol>
-<h2 id="bestandsbeheerder">Bestandsbeheerder</h2>
+<h2 id="bestanden">Bestanden</h2>
 <ol type="1">
+<li><p>Waar staat de thuismap van tux?</p></li>
+<li><p>Wat is het map scheidingsteken op Linux?</p></li>
+<li><p>Onder welke map is een aangekoppelde USB-stick terug te vinden?</p></li>
 <li><p>Waarvoor hebt u een bestandsbeheerder nodig (noem vier redenen)?</p></li>
 <li><p>Noem drie manieren waarop u de bestandsbeheerder kunt openen.</p></li>
 <li><p>Wisselen tussen raster- en lijstweergave.</p>
@@ -716,6 +719,56 @@
 </ol>
 <h1 id="werkbladen-en-vensters">Werkbladen en vensters</h1>
 <ol type="1">
+<li><p>Wisselen tussen twee toepassingen op één werkblad</p>
+<ul>
+<li><p>Open Firefox met <code>SUPER+1</code></p></li>
+<li><p>Open bestandsbeheer <code>SUPER+4</code></p></li>
+<li><p>Wissel terug naar Firefox met <code>ALT+TAB</code></p>
+<ul>
+<li>Hoe had u dit anders kunnen doen met een sneltoets?</li>
+</ul></li>
+<li><p>Wissel nu weer naar de bestandsbeheerder met <code>ALT+TAB</code></p></li>
+<li><p>Sluit beide toepassingen met <code>ALT+F4</code></p>
+<ul>
+<li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
+<li><p>Sluit Firefox met <code>ALT+F4</code></p></li>
+</ul></li>
+</ul></li>
+<li><p>Wisselen tussen vier toepassingen op één werkblad</p>
+<ul>
+<li><p>Open Firefox met <code>SUPER+1</code></p></li>
+<li><p>Open bestandsbeheer <code>SUPER+4</code></p></li>
+<li><p>Open LibreOffice writer <code>SUPER+3</code></p></li>
+<li><p>Open Hulp met <code>SUPER+6</code></p></li>
+<li><p>Wissel nu de focus naar Firefox terug door <code>ALT+[TAB TAB TAB]</code> (u houdt <code>ALT</code> ingedrukt en drukt driemaal op <code>TAB</code> )</p></li>
+<li><p>Wissel nu de focus naar Hulp door <code>ALT+TAB</code></p></li>
+<li><p>Wissel focus naar Writer met <code>ALT+[TAB TAB]</code></p></li>
+<li><p>Zie wat er gebeurt met het popup venster met icons van de geopende toepassingen als u <code>ALT+[TAB TAB TAB TAB]</code> doet (als alles goed is houdt Writer de focus)</p></li>
+<li><p>Sluit alle toepassingen door viermaal <code>ALT+F4</code> te geven</p></li>
+</ul></li>
+<li><p>Wisselen tussen vier toepassingen op één werkblad</p>
+<ul>
+<li><p>Open Firefox met <code>SUPER+1</code></p></li>
+<li><p>Open bestandsbeheer <code>SUPER+4</code></p></li>
+<li><p>Open LibreOffice writer <code>SUPER+3</code></p></li>
+<li><p>Open Hulp met <code>SUPER+6</code></p></li>
+<li><p>Wissel naar via activiteiten modus naar Firefox</p>
+<ul>
+<li><p><code>SUPER</code></p></li>
+<li><p>klik op Firefox</p></li>
+</ul></li>
+<li><p>Wissel naar via activiteiten modus naar bestandsbeheer</p>
+<ul>
+<li><p><code>SUPER</code></p></li>
+<li><p>U gebruikt de pijltjes om bestandsbeheer te selecteren en u drukt dan <code>ENTER</code></p></li>
+</ul></li>
+<li><p>Wissel naar via activiteiten modus naar Hulp</p>
+<ul>
+<li><p><code>SUPER</code></p></li>
+<li><p>U gebruikt de pijltjes om Hulp te selecteren en u drukt dan <code>ENTER</code></p></li>
+</ul></li>
+<li><p>Sluit alle toepassingen door viermaal <code>ALT+F4</code> te geven</p></li>
+</ul></li>
 <li><p>Wisselen tussen twee toepassingen op twee werkbladen</p>
 <ul>
 <li><p>Open Firefox met <code>SUPER+1</code></p></li>
@@ -736,6 +789,75 @@
 <li><p>Sluit deze met <code>ALT+F4</code></p></li>
 </ul></li>
 </ul></li>
+<li><p>Wisselen tussen twee vensters van dezelfde toepassing</p>
+<ul>
+<li><p>Open Firefox met <code>SUPER+1</code></p></li>
+<li><p>Open LibreOffice writer <code>SUPER+3</code></p></li>
+<li><p>Open een extra writer venster met <code>CTRL+N</code></p></li>
+<li><p>Merk op dat u met <code>ALT+TAB</code> combinaties niet bij het “Geen titel 1” venster van writer kunt terugkomen</p></li>
+<li><p>Geef met <code>ALT+TAB</code> writer de focus</p></li>
+<li><p>Geef met <code>ALT+`</code> het “Geen titel 1” venster van writer de focus</p></li>
+<li><p>Geef met <code>ALT+`</code> het “Geen titel 2” venster van writer de focus</p></li>
+<li><p>Sluit alle vensters door driemaal <code>ALT+F4</code> te geven</p></li>
+</ul></li>
+<li><p>Snel wisselen tussen de vensters van één werkblad</p>
+<ul>
+<li><p>Open Firefox met <code>SUPER+1</code></p></li>
+<li><p>Open LibreOffice writer <code>SUPER+3</code></p></li>
+<li><p>Open een extra writer venster met <code>CTRL+N</code></p></li>
+<li><p>Ga naar het werkblad rechts van dit werkblad via activiteiten: <code>SUPER</code>, <code>PageDown</code>, <code>SUPER</code></p></li>
+<li><p>Open Hulp <code>SUPER+6</code></p></li>
+<li><p>Open Software <code>SUPER+5</code></p></li>
+<li><p>Wissel nu terug naar Hulp met <code>ALT+ESC</code></p></li>
+<li><p>Wissel terug naar Software met <code>ALT+ESC</code></p></li>
+<li><p>Ga terug naar het eerste werkblad met <code>SUPER</code>, <code>PageUp</code>, <code>SUPER</code></p></li>
+<li><p>Wissel met <code>ALT+ESC</code> naar het “Geen titel 1” venster van writer</p></li>
+<li><p>Wissel met <code>ALT+[ESC ESC]</code> naar Firefox</p></li>
+<li><p>Geef driemaal <code>ALT+F4</code> om de drie vensters op het eerste werkblad te sluiten</p></li>
+<li><p>Geef <code>ALT+TAB</code> om Software de focus te geven</p></li>
+<li><p>Geef tweemaal <code>ALT+F4</code> om Software en Hulp te sluiten</p></li>
+</ul></li>
+<li><p>Venster meenemen naar ander werkblad</p>
+<ul>
+<li><p>Open Firefox met <code>SUPER+1</code></p></li>
+<li><p>Open LibreOffice writer <code>SUPER+3</code></p></li>
+<li><p>Open een extra writer venster met <code>CTRL+N</code></p></li>
+<li><p>Ga met “Geen titel 2” naar het werkblad rechts van deze door <code>SUPER+SHIFT+PageDown</code> te geven</p></li>
+<li><p>Ga terug naar het eerste werkblad met <code>SUPER</code>, <code>PageUp</code>, <code>SUPER</code></p></li>
+<li><p>Welke venters staan hier?</p></li>
+<li><p>Ga weer terug naar het tweede werkblad met <code>SUPER</code>, <code>PageDown</code>, <code>SUPER</code></p></li>
+<li><p>Welke venster staat hier?</p></li>
+<li><p>Sluit al deze vensters met <code>ALT+F4</code> zonder de muis te gebruiken (<em>Hint</em>: <code>SUPER</code>, <code>PageUp</code>, <code>SUPER</code> )</p></li>
+</ul></li>
+<li><p>Venster verplaatsen naar ander werkblad via venstermenu</p>
+<ul>
+<li><p>Open Firefox met <code>SUPER+1</code></p></li>
+<li><p>Open LibreOffice writer <code>SUPER+3</code></p></li>
+<li><p>Open een extra writer venster met <code>CTRL+N</code></p></li>
+<li><p>Open het venstermenu van het “Geen titel 2” venster met <code>ALT+SPATIEBALK</code></p></li>
+<li><p>Ga met de pijltjes naar “Naar werkblad rechts” en druk <code>SPATIEBALK</code></p></li>
+<li><p>Ga naar het tweede werkblad met <code>SUPER+PageDown</code></p></li>
+<li><p>Welk venster staat daar?</p></li>
+<li><p>Ga terug naar het eerste werkblad met <code>SUPER</code>, <code>PageUp</code>, <code>SUPER</code></p></li>
+<li><p>Welke venters staan hier?</p></li>
+<li><p>Sluit al deze vensters met <code>ALT+F4</code> zonder de muis te gebruiken (<em>Hint</em>: <code>SUPER</code>, <code>PageDown</code>, <code>SUPER</code> )</p></li>
+</ul></li>
+<li><p>In activiteiten modus focus wisselen tussen elementen</p>
+<ul>
+<li><p>Ga activiteiten modus in met <code>SUPER</code></p></li>
+<li><p>Druk <code>ALT+CTRL+[TAB*]</code> (<code>[TAB*]</code> betekent hier 1 of meer keer <code>TAB</code>)</p>
+<ul>
+<li><p>Houdt met de rechterhand <code>CTRL</code> ingedrukt</p></li>
+<li><p>Met de linkerhand <code>ALT+[TAB*]</code></p></li>
+</ul></li>
+<li><p>Noem de verschillende componenten op (vijf stuks) waar de focus naar toe kan</p></li>
+<li><p>Probeer al deze vijf componenten uit (met pijltjes toetsen en spatiebalk of enter)</p></li>
+</ul></li>
+<li><p>Omschrijf in uw eigen woorden wat een werkblad in GNOME is.</p></li>
+<li><p>Waarvoor kunt u werkbladen gebruiken?</p></li>
+<li><p>Noem twee manieren om tussen werkbladen te wisselen (er zijn er drie)?</p></li>
+<li><p>Welke twee manieren kent u om een venster naar een ander werkblad te verplaatsen (terwijl u op het huidige werkblad blijft)?</p></li>
+<li><p>Hoe wisselt u van werkblad terwijl u het venster dat de focus heeft meeneemt?</p></li>
 </ol>
 <h1 id="toepassingen-installeren">Toepassingen installeren</h1>
 <ol type="1">
@@ -788,41 +910,6 @@
 <li><p>Plaatje veranderen (<code>Linus</code>)</p></li>
 <li><p>Gebruiker wisselen (Van <code>tux</code> naar <code>linus</code>)</p></li>
 <li><p>Log uit van <code>linus</code></p></li>
-</ol>
-<h1 id="bestanden">Bestanden</h1>
-<ol type="1">
-<li><p>Open bestanden (<code>SUPER+4</code>)</p>
-<ol type="a">
-<li><p>schakel tussen list view <code>CTRL+1</code> en Icon view <code>CTRL+2</code></p></li>
-<li><p>verberg linker zijpaneel <code>F9</code></p></li>
-<li><p>schakel focus tussen linker en rechter paneel met <code>F6</code></p></li>
-<li><p>toon verberg verborgen bestanden <code>CTRL+H</code></p></li>
-<li><p>toon shortcuts <code>CTRL+?</code>, schakel met <code>ALT+1</code>, <code>ALT+2</code>, <code>ALT+3</code></p></li>
-<li><p>zoeken</p>
-<ol type="i">
-<li>ga naar home directory <code>ALT+HOME</code></li>
-<li>gebruik <code>CTRL+F</code></li>
-</ol></li>
-</ol></li>
-<li><p>In en uitzoomen met plaatjes</p>
-<ol type="a">
-<li><p>in zoomen met <code>CTRL+PLUS</code></p></li>
-<li><p>uitzoomen met <code>CTRL+MINUS</code></p></li>
-<li><p>terug naar standaard met <code>CTRL+0</code></p></li>
-</ol></li>
-<li><p>Bestand aanmaken het gedit en verwijderen</p>
-<ol type="a">
-<li><p><code>SUPER</code>, <code>gedit</code>, <code>ENTER</code></p></li>
-<li><p>type je naam</p></li>
-<li><p><code>CTRL+S</code></p></li>
-<li><p>sla het op in documenten, onder naam test</p>
-<ol type="i">
-<li>type <code>Do</code></li>
-<li>druk pijltje naar beneden, en <code>ENTER</code></li>
-<li>voeg <code>Test</code> toe</li>
-<li><code>ENTER</code></li>
-</ol></li>
-</ol></li>
 </ol>
 <h1 id="speciale-tekens">Speciale tekens</h1>
 <ol type="1">
