--- a/samenvatting.html
+++ b/samenvatting.html
@@ -397,6 +397,7 @@
 <ul>
 <li><p>Dubbelklikken op de titelbalk</p></li>
 <li><p>Venstermenu</p></li>
+<li><p>Slepen aan titelbalk tot boven de bovenbalk</p></li>
 </ul></li>
 <li><p>Verplaatsen</p>
 <ul>
@@ -420,7 +421,7 @@
 <li><p><code>CTRL</code> met pijltjes kleine stapjes</p></li>
 </ul></li>
 </ul></li>
-<li><p>Minimaliseren</p>
+<li><p>Verbergen</p>
 <ul>
 <li><p><code>SUPER+H</code> of venstermenu</p></li>
 <li><p>Terughalen</p>
