deploy: 791d887852b51ac3d4ebfba525a3c3048d471a20

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <li><p><a href="bestanden.html">Bestanden</a></p></li>
 <li><p><a href="vensters-en-werkbladen.html">Vensters en werkbladen</a></p></li>
 <li><p><a href="instellingen.html">Instellingen</a></p></li>
+<li><p><a href="toepassingen-installeren.html">Toepassingen installeren</a></p></li>
 </ol>
 </body>
 </html>
