--- a/oefeningen.html
+++ b/oefeningen.html
@@ -717,7 +717,7 @@
 <li><p>Met welke sneltoets kunt u in één keer naar uw persoonlijke map terugkeren?</p></li>
 <li><p>Met welke sneltoets kunt terug gaan naar de lokatie waar u was? En met welke weer vooruit (<em>Hint: dit heet “Ga terug” en “Ga verder”</em>)? Probeer dit uitvoerig uit. U opent de bestandsbeheerder en gaat naar <code>Documenten</code> en dan naar <code>Afbeeldingen/Schermafdrukken</code> en probeert de gevonden sneltoetsen uit.</p></li>
 </ol>
-<h1 id="werkbladen-en-vensters">Werkbladen en vensters</h1>
+<h1 id="vensters-en-werkbladen">Vensters en werkbladen</h1>
 <ol type="1">
 <li><p>Wisselen tussen twee toepassingen op één werkblad</p>
 <ul>
@@ -858,6 +858,178 @@
 <li><p>Noem twee manieren om tussen werkbladen te wisselen (er zijn er drie)?</p></li>
 <li><p>Welke twee manieren kent u om een venster naar een ander werkblad te verplaatsen (terwijl u op het huidige werkblad blijft)?</p></li>
 <li><p>Hoe wisselt u van werkblad terwijl u het venster dat de focus heeft meeneemt?</p></li>
+<li><p>Op twee manieren openen van het venstermenu van LibreOffice writer</p>
+<ul>
+<li><p>Open de bestandsbeheerder met <code>SUPER+3</code></p></li>
+<li><p>Klik rechts in titelbalk om het venstermenu te openen</p></li>
+<li><p>Klik ergens naast het menu om het te sluiten</p></li>
+<li><p>Open het venstermenu met <code>ALT+SPATIEBALK</code></p></li>
+<li><p>Sluit het venster door op “Sluiten” in dit menu te klikken</p></li>
+</ul></li>
+<li><p>Op twee manieren openen van het venstermenu van de bestandsbeheerder</p>
+<ul>
+<li><p>Open de bestandsbeheerder met <code>SUPER+E</code></p></li>
+<li><p>Klik rechts op een vrij stukje in titelbalk om het venstermenu te openen</p></li>
+<li><p>Klik ergens naast het menu om het te sluiten</p></li>
+<li><p>Open het venstermenu met <code>ALT+SPATIEBALK</code></p></li>
+<li><p>Sluit het venster door op “Sluiten” in dit menu te klikken</p></li>
+</ul></li>
+<li><p>Op twee manieren openen van het venstermenu van Firefox</p>
+<ul>
+<li><p>Open de bestandsbeheerder met <code>SUPER+1</code></p></li>
+<li><p>Klik rechts op een vrij stukje in titelbalk. Merk op dat een ander menu gerelateerd aan de tabbladen wordt getoond. Klik nogmaals rechts om het venstermenu te openen.</p></li>
+<li><p>Klik ergens naast het menu om het te sluiten</p></li>
+<li><p>Open het venstermenu met <code>ALT+SPATIEBALK</code></p></li>
+<li><p>Sluit het venster door op “Sluiten” in dit menu te klikken</p></li>
+</ul></li>
+<li><p>Wat is de meest betrouwbare en eenduidige wijze om het verstermenu te openen?</p></li>
+<li><p>Maximaliseren en herstellen van LibreOffice writer</p>
+<ul>
+<li><p>Open LibreOffice writer met <code>SUPER+3</code></p></li>
+<li><p>Maximaliseer het venster met <code>SUPER+↑</code></p></li>
+<li><p>Herstel het venster met <code>SUPER+↓</code></p></li>
+<li><p>Maximaliseer het venster nu door op de titelbalk dubbel te klikken</p></li>
+<li><p>Herstel het venster door op de titelbalk dubbel te klikken</p></li>
+<li><p>Maximaliseer het venster door de titelbalk tot boven de bovenbalk te slepen (Merk op dat het hele scherm blauw wordt om aan te geven dat u op het punt staat het venster te maximaliseren).</p></li>
+<li><p>Herstel het venster door de titelbalk naar beneden te slepen</p></li>
+<li><p>Maximaliseer het venster nu via het venstermenu dat u met <code>ALT+SPATIEBALK</code> opent</p></li>
+<li><p>Herstel het venster via het venstermenu dat u met <code>ALT+SPATIEBALK</code> opent</p></li>
+<li><p>Sluit writer met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Maximaliseren en herstellen van de bestandsbeheerder</p>
+<ul>
+<li><p>Open LibreOffice writer met <code>SUPER+E</code></p></li>
+<li><p>Maximaliseer het venster met <code>SUPER+↑</code></p></li>
+<li><p>Herstel het venster met <code>SUPER+↓</code></p></li>
+<li><p>Maximaliseer het venster nu door op een vrij stuk in de titelbalk dubbel te klikken</p></li>
+<li><p>Herstel het venster door op een vrij stuk in de titelbalk dubbel te klikken</p></li>
+<li><p>Maximaliseer het venster door een vrij stuk van de titelbalk tot boven de bovenbalk te slepen (Merk op dat het hele scherm blauw wordt om aan te geven dat u op het punt staat het venster te maximaliseren).</p></li>
+<li><p>Herstel het venster door een vrij stuk van de titelbalk naar beneden te slepen</p></li>
+<li><p>Maximaliseer het venster nu via het venstermenu dat u met <code>ALT+SPATIEBALK</code> opent</p></li>
+<li><p>Herstel het venster via het venstermenu dat u met <code>ALT+SPATIEBALK</code> opent</p></li>
+<li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Maximaliseren en herstellen van Firefox</p>
+<ul>
+<li><p>Open Firefox met <code>SUPER+1</code></p></li>
+<li><p>Maximaliseer het venster met <code>SUPER+↑</code></p></li>
+<li><p>Herstel het venster met <code>SUPER+↓</code></p></li>
+<li><p>Maximaliseer het venster nu door op een vrij stuk van de titelbalk dubbel te klikken</p></li>
+<li><p>Herstel het venster door op een vrij stuk van de titelbalk dubbel te klikken</p></li>
+<li><p>Maximaliseer het venster door een vrij stuk van de titelbalk tot boven de bovenbalk te slepen (Merk op dat het hele scherm blauw wordt om aan te geven dat u op het punt staat het venster te maximaliseren).</p></li>
+<li><p>Herstel het venster door een vrij stuk van de titelbalk naar beneden te slepen</p></li>
+<li><p>Open nu door zevenmaal <code>CTRL+T</code> in de drukken nog zeven lege tabbladen</p></li>
+<li><p>Lukt het u nog om ofwel via dubbelklikken op de titelbalk te maximaliseren en te herstellen of door het slepen van de titelbalk te maximaliseren en herstellen? Gebruik eventueel <code>ALT+F4</code> om onbedoeld onstane vensters te sluiten.</p></li>
+<li><p>Sluit de zeven extra lege tabbladen weer met <code>CTRL+W</code></p></li>
+<li><p>Maximaliseer het venster nu via het venstermenu dat u met <code>ALT+SPATIEBALK</code> opent</p></li>
+<li><p>Herstel het venster via het venstermenu dat u met <code>ALT+SPATIEBALK</code> opent</p></li>
+<li><p>Sluit Firefox met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Verplaatsen van LibreOffice writer via sneltoets</p>
+<ul>
+<li><p>Open writer met <code>SUPER+3</code></p></li>
+<li><p>Indien nodig herstel het venster met <code>SUPER+↓</code></p></li>
+<li><p>Ga naar verplaats modus met <code>ALT+F7</code></p></li>
+<li><p>Beweeg het venster naar de rechter benedenhoek van het scherm en klik eenmaal met de muis</p></li>
+<li><p>Ga naar verplaats modus met <code>ALT+F7</code></p></li>
+<li><p>Beweeg het venster naar de linker bovenhoek van het scherm en druk <code>ESC</code>. Wat gebeurde er? Waarom gebeurde dit?</p></li>
+<li><p>Sluit het venster met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Verplaatsen van LibreOffice writer via sneltoetsen</p>
+<ul>
+<li><p>Open writer met <code>SUPER+3</code></p></li>
+<li><p>Indien nodig herstel het venster met <code>SUPER+↓</code></p></li>
+<li><p>Ga naar verplaats modus met <code>ALT+F7</code></p></li>
+<li><p>Geef het venster met de pijltjes een nieuwe plek op het scherm</p></li>
+<li><p>Wat gebeurt er als u <code>ESC</code> indrukt?</p></li>
+<li><p>Herhaal de laatste twee stappen, maar druk nu <code>ENTER</code> in plaats van <code>ESC</code> in de laatste stap</p></li>
+<li><p>Sluit het venster met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Verplaatsen van LibreOffice writer via sneltoets naar de randen van het scherm</p>
+<ul>
+<li><p>Open writer met <code>SUPER+3</code></p></li>
+<li><p>Indien nodig herstel het venster met <code>SUPER+↓</code></p></li>
+<li><p>Ga naar verplaats modus met <code>ALT+F7</code></p></li>
+<li><p>Verplaats het scherm naar de rechter rand met <code>SHIFT+→</code></p></li>
+<li><p>Verplaats het scherm naar de beneden rand met <code>SHIFT+↓</code></p></li>
+<li><p>Verplaats het scherm naar de linker benedenhoek met <code>SHIFT+←</code></p></li>
+<li><p>Verplaats het scherm naar de linker bovenhoek met <code>SHIFT+↑</code></p></li>
+<li><p>Wat gebeurt er als u <code>ESC</code> indrukt?</p></li>
+<li><p>Herhaal de laatste zes stappen, maar druk nu <code>ENTER</code> in plaats van <code>ESC</code> in de laatste stap</p></li>
+<li><p>Sluit het venster met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Precies verplaatsen van LibreOffice writer via sneltoetsen</p>
+<ul>
+<li><p>Open writer met <code>SUPER+3</code></p></li>
+<li><p>Indien nodig herstel het venster met <code>SUPER+↓</code></p></li>
+<li><p>Ga naar verplaats modus met <code>ALT+F7</code></p></li>
+<li><p>Geef het venster met de pijltjes een nieuwe plek op het scherm. En verfijn deze plek het de <code>CTRL</code> pijltjes combinaties.</p></li>
+<li><p>Druk <code>ENTER</code></p></li>
+<li><p>Sluit het venster met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Verplaatsen van LibreOffice writer via venstermenu</p>
+<ul>
+<li><p>Open writer met <code>SUPER+3</code></p></li>
+<li><p>Indien nodig herstel het venster met <code>SUPER+↓</code></p></li>
+<li><p>Open het venstermenu met <code>ALT+SPATIEBALK</code></p></li>
+<li><p>Activeer het “Verplaatsen” item door driemaal <code>↓</code> te geven, gevolgd door <code>SPATIEBALK</code>. U bent nu in verplaatsen modus.</p></li>
+<li><p>Gebruik twee toetsencombinaties om het venster in de rechter benedenhoek van het scherm te krijgen en bevestig dit met <code>ENTER</code></p></li>
+<li><p>Sluit het venster met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Verplaatsen van de bestandsbeheerder door de titelbalk te slepen</p>
+<ul>
+<li><p>Open de bestandsbeheerder met <code>SUPER+E</code></p></li>
+<li><p>Sleep het venster aan de titelbalk naar een nieuwe plek. Merk op dat u geen vrije plek op de titelbalk nodig hebt. Probeer het ook eens door de adresbalk te verslepen.</p></li>
+<li><p>Sluit het venster met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Slepen met de Firefox titelbalk</p>
+<ul>
+<li><p>Open Firefox <code>SUPER+1</code></p></li>
+<li><p>Zoek op met welke sneltoets u een nieuw tabblad opent</p></li>
+<li><p>Gebruik deze sneltoets tot de titelbalk vol zit met tabbladen</p></li>
+<li><p>Probeer nu het venster te verplaatsen door de titelbalk te verslepen. Wat gebeurt er allemaal?</p></li>
+<li><p>Wat gebeurt er als u een tabblad op de titelbalk versleept en loslaat?</p></li>
+<li><p>Sluit alle venster van Firefox met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Grootte van LibreOffice writer venster aanpassen de met muis</p>
+<ul>
+<li><p>Open writer met <code>SUPER+3</code></p></li>
+<li><p>Ga na door de muis nauwkeurig boven de hoeken van het venster te bewegen dat u de volgende cursors kunt krijgen <img src="img/resize-cursors/top_left_corner.png" width="25" /> <img src="img/resize-cursors/top_right_corner.png" width="25" /> <img src="img/resize-cursors/bottom_right_corner.png" width="25" /> <img src="img/resize-cursors/bottom_left_corner.png" width="25" /></p></li>
+<li><p>Ga na door de muis nauwkeurig boven de randen van het venster te bewegen dat u de volgende cursors kunt krijgen <img src="img/resize-cursors/left_side.png" width="25" /> <img src="img/resize-cursors/right_side.png" width="25" /> <img src="img/resize-cursors/top_side.png" width="25" /> <img src="img/resize-cursors/bottom_side.png" width="25" /></p></li>
+<li><p>Merk op dat dit best iets vraagt van de fijne motoriek</p></li>
+<li><p>Sluit writer met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Grootte van Firefox aanpassen via het venstermenu en muis.</p>
+<ul>
+<li><p>Open Firefox met <code>SUPER+1</code></p></li>
+<li><p>Open het venstermenu met <code>ALT+SPATIEBALK</code></p></li>
+<li><p>Druk viermaal <code>↓</code> gevolgd door <code>SPATIEBALK</code></p></li>
+<li><p>Beweeg nu de muis richting één van de hoeken om één van deze cursors te krijgen <img src="img/resize-cursors/top_left_corner.png" width="25" /> <img src="img/resize-cursors/top_right_corner.png" width="25" /> <img src="img/resize-cursors/bottom_right_corner.png" width="25" /> <img src="img/resize-cursors/bottom_left_corner.png" width="25" /> (<em>Hint</em>: Druk <code>ESC</code> als het fout gaat en ga opnieuw grootte aanpas modus in met <code>ALT+F8</code>). Zorg dat alle vier de richtingen hebt geoefend.</p></li>
+<li><p>Ga grootte wijzigen modus in met <code>ALT+F8</code>. Beweeg nu de muis richting één van de randen om één van de volgende cursors te krijgen <img src="img/resize-cursors/left_side.png" width="25" /> <img src="img/resize-cursors/right_side.png" width="25" /> <img src="img/resize-cursors/top_side.png" width="25" /> <img src="img/resize-cursors/bottom_side.png" width="25" />. Herhaal deze stap totdat u alle richtingen hebt gehad.</p></li>
+<li><p>Sluit Firefox met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Grootte van Firefox aanpassen met sneltoetsen</p>
+<ul>
+<li><p>Open Firefox met <code>SUPER+1</code></p></li>
+<li><p>Ga grootte aanpas modus in met <code>ALT+F8</code></p></li>
+<li><p>Gebruik de pijltjes om de grootte aan te passen. Wat kunt u zeggen over wat het eerste pijltje doet wat u indrukt? Gebruik <code>ENTER</code> om de nieuwe grootte te accepteren.</p></li>
+<li><p>Hoe had u de nieuwe grootte kunnen annuleren? Probeer dit uit.</p></li>
+<li><p>Sluit Firefox met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Grootte van Firefox aanpassen met grote stappen met sneltoetsen</p>
+<ul>
+<li><p>Open Firefox met <code>SUPER+1</code></p></li>
+<li><p>Ga grootte aanpas modus in met <code>ALT+F8</code></p></li>
+<li><p>Gebruik de <code>SHIFT</code> met de pijltjes om de grootte aan te passen. Gebruik <code>ENTER</code> om de nieuwe grootte te accepteren.</p></li>
+<li><p>Sluit Firefox met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Grootte van Firefox aanpassen per pixel met sneltoetsen</p>
+<ul>
+<li><p>Open Firefox met <code>SUPER+1</code></p></li>
+<li><p>Ga grootte aanpas modus in met <code>ALT+F8</code></p></li>
+<li><p>Gebruik de pijltjes om de grootte aan te passen. Gebruik nu <code>CTRL</code> met de pijltjes om het venster per pixel te vergroten of verkleinen. Gebruik <code>ENTER</code> om de nieuwe grootte te accepteren.</p></li>
+<li><p>Sluit Firefox met <code>ALT+F4</code></p></li>
+</ul></li>
 </ol>
 <h1 id="toepassingen-installeren">Toepassingen installeren</h1>
 <ol type="1">
@@ -902,14 +1074,6 @@
 <li><p>verwijder het bestand weer</p></li>
 </ol></li>
 <li><p>Verwijder je online account</p></li>
-</ol>
-<h1 id="gebruikersbeheer">Gebruikersbeheer</h1>
-<ol type="1">
-<li><p>Gebruiker toevoegen (<code>Linus</code>)</p></li>
-<li><p>Wachtwoord veranderen (<code>linus</code>)</p></li>
-<li><p>Plaatje veranderen (<code>Linus</code>)</p></li>
-<li><p>Gebruiker wisselen (Van <code>tux</code> naar <code>linus</code>)</p></li>
-<li><p>Log uit van <code>linus</code></p></li>
 </ol>
 <h1 id="speciale-tekens">Speciale tekens</h1>
 <ol type="1">
