--- a/samenvatting.html
+++ b/samenvatting.html
@@ -351,7 +351,7 @@
 </ul></li>
 </ul></li>
 </ul>
-<h1 id="werkbladen-en-vensters">Werkbladen en vensters</h1>
+<h1 id="vensters-en-werkbladen">Vensters en werkbladen</h1>
 <h2 id="wisselen-tussen-geopende-toepassingen">Wisselen tussen geopende toepassingen</h2>
 <ul>
 <li><p>Indien op hetzelfde werkblad (en zichtbaar) door in het venster te klikken</p></li>
@@ -425,9 +425,10 @@
 <ul>
 <li><p><code>SUPER+H</code> of venstermenu</p></li>
 <li><p>Terughalen</p>
-<pre><code>  - Erop klikken in activiteiten modus
-
-  - ```ALT+TAB```, ```SUPER+TAB```</code></pre></li>
+<ul>
+<li><p>Erop klikken in activiteiten modus</p></li>
+<li><p><code>ALT+TAB</code>, <code>SUPER+TAB</code></p></li>
+</ul></li>
 </ul></li>
 <li><p>Helft scherm gebruiken</p>
 <ul>
