--- a/oefeningen.html
+++ b/oefeningen.html
@@ -1030,6 +1030,85 @@
 <li><p>Gebruik de pijltjes om de grootte aan te passen. Gebruik nu <code>CTRL</code> met de pijltjes om het venster per pixel te vergroten of verkleinen. Gebruik <code>ENTER</code> om de nieuwe grootte te accepteren.</p></li>
 <li><p>Sluit Firefox met <code>ALT+F4</code></p></li>
 </ul></li>
+<li><p>Venster verbergen en terughalen via avtiviteiten modus</p>
+<ul>
+<li><p>Open Firefox met <code>SUPER+1</code></p></li>
+<li><p>Open de bestandsbeheerder <code>SUPER+E</code></p></li>
+<li><p>Open het venstermenu van de bestandsbeheerder met <code>ALT+SPATIEBALK</code></p></li>
+<li><p>Activeer het item “Verbergen” (<code>↓ SPATIEBALK</code>)</p></li>
+<li><p>Merk op dat u slechts het Firefox venster nog op het scherm ziet</p></li>
+<li><p>Ga met <code>SUPER</code> activiteiten modus in</p></li>
+<li><p>Selecteer met de pijltjes het bestandsbeheer venster en druk <code>ENTER</code></p></li>
+<li><p>Sluit beide vensters met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Venster verbergen en terughalen met <code>ALT+TAB</code></p>
+<ul>
+<li><p>Open Firefox met <code>SUPER+1</code></p></li>
+<li><p>Open de bestandsbeheerder <code>SUPER+E</code></p></li>
+<li><p>Open het venstermenu van de bestandsbeheerder met <code>ALT+SPATIEBALK</code></p></li>
+<li><p>Activeer het item “Verbergen” (<code>↓ SPATIEBALK</code>)</p></li>
+<li><p>Merk op dat u slechts het Firefox venster nog op het scherm ziet</p></li>
+<li><p>Maak nu met <code>ALT+TAB</code> de bestandsbeheerder weer zichtbaar</p></li>
+<li><p>Sluit beide vensters met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Venster verbergen met sneltoets en terughalen met <code>ALT+TAB</code></p>
+<ul>
+<li><p>Open Firefox met <code>SUPER+1</code></p></li>
+<li><p>Open de bestandsbeheerder <code>SUPER+E</code></p></li>
+<li><p>Verberg de bestandsbeheerder met <code>SUPER+H</code></p></li>
+<li><p>Maak nu met <code>ALT+TAB</code> de bestandsbeheerder weer zichtbaar</p></li>
+<li><p>Sluit beide vensters met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Venster verbergen met sneltoets en terughalen via activiteiten modus</p>
+<ul>
+<li><p>Open Firefox met <code>SUPER+1</code></p></li>
+<li><p>Open de bestandsbeheerder <code>SUPER+E</code></p></li>
+<li><p>Verberg de bestandsbeheerder met <code>SUPER+H</code></p></li>
+<li><p>Ga met <code>SUPER</code> activiteiten modus in</p></li>
+<li><p>Selecteer met de pijltjes het bestandsbeheer venster en druk <code>ENTER</code></p></li>
+<li><p>Sluit beide vensters met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Twee writer vensters gelijk over het scherm verdelen</p>
+<ul>
+<li><p>Open LibreOffice writer <code>SUPER+3</code></p></li>
+<li><p>Geef dit venster de linkerhelft van het scherm met <code>SUPER+←</code></p></li>
+<li><p>Open een extra writer venster met <code>CTRL+N</code></p></li>
+<li><p>Geef dit venster de rechterhelft van het scherm met <code>SUPER+→</code></p></li>
+<li><p>Sluit beide vensters in één keer met <code>CTRL+Q</code></p></li>
+</ul></li>
+<li><p>Twee vensters gelijk over het scherm verdelen</p>
+<ul>
+<li><p>Open LibreOffice writer <code>SUPER+3</code></p></li>
+<li><p>Geef dit venster de linkerhelft van het scherm met <code>SUPER+←</code></p></li>
+<li><p>Open Firefox met <code>SUPER+1</code></p></li>
+<li><p>Geef dit venster de rechterhelft van het scherm met <code>SUPER+→</code></p></li>
+<li><p>Sluit beide vensters met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Achtergrond aanpassen</p>
+<ul>
+<li><p>Zorg dat u de achtergrond kunt zien, ga eventueel naar een vers werkblad met <code>SUPER+END</code></p></li>
+<li><p>Open het context menu van het bureaublad (rechtsklikken op bureaublad)</p></li>
+<li><p>Activeer het item “Achtergrond aanpassen…”</p></li>
+<li><p>Zorg dat u de achtergrond kunt zien door het instellingens venster te herstellen met <code>SUPER+↓</code></p></li>
+<li><p>Kies een andere achtergrond en sluit het instellingen venster met <code>ALT+F4</code></p></li>
+<li><p>Terugzetten van de originele achtergrond</p>
+<ul>
+<li><p>Open het context menu van het bureaublad (rechtsklikken op bureaublad)</p></li>
+<li><p>Activeer het item “Achtergrond aanpassen…”</p></li>
+<li><p>Zorg dat u de achtergrond kunt zien door het instellingens venster te herstellen met <code>SUPER+↓</code></p></li>
+<li><p>Kies de vijfde achtergrond uit de mogelijkheden en sluit het instellingen venster met <code>ALT+F4</code></p></li>
+</ul></li>
+</ul></li>
+<li><p>Achtergrond aanpassen met gedownloade afbeelding</p>
+<ul>
+<li><p>Open Firefox en zoek op “Debian background” en ga naar Google Afbeeldingen</p></li>
+<li><p>Kies er één uit en download deze in de map Afbeeldingen (Open het context menu op de afbeelding en kies “Afbeeldinge opslaan als…”)</p></li>
+<li><p>Sluit Firefox met <code>ALT+F4</code></p></li>
+<li><p>Open de bestandsbeheerder met <code>SUPER+E</code></p></li>
+<li><p>Ga naar “Afbeeldingen” door op linker paneel op “Afbeeldingen” te klikken</p></li>
+<li><p>Open het contextmenu van de afbeelding en kies “Instellen als bureaubladachtergrond…” en accepteer de afbeelding door op de knop “Instellen” te klikken</p></li>
+<li><p>Volg de stappen van “terugzetten van de originele achtergrond” van de vorige opgave</p></li>
+</ul></li>
 </ol>
 <h1 id="toepassingen-installeren">Toepassingen installeren</h1>
 <ol type="1">
