deploy: fdb9e2a5d5eef4367237caa2322dad6c017589b7

--- a/oefeningen.html
+++ b/oefeningen.html
@@ -1102,7 +1102,7 @@
 <li><p>Achtergrond aanpassen met gedownloade afbeelding</p>
 <ul>
 <li><p>Open Firefox en zoek op “Debian background” en ga naar Google Afbeeldingen</p></li>
-<li><p>Kies er één uit en download deze in de map Afbeeldingen (Open het context menu op de afbeelding en kies “Afbeeldinge opslaan als…”)</p></li>
+<li><p>Kies er één uit en download deze in de map Afbeeldingen (Open het context menu op de afbeelding en kies “Afbeelding opslaan als…”)</p></li>
 <li><p>Sluit Firefox met <code>ALT+F4</code></p></li>
 <li><p>Open de bestandsbeheerder met <code>SUPER+E</code></p></li>
 <li><p>Ga naar “Afbeeldingen” door op linker paneel op “Afbeeldingen” te klikken</p></li>
