--- a/samenvatting.html
+++ b/samenvatting.html
@@ -441,6 +441,19 @@
 <li>Context menu bureaublad <img src="img/bureaublad-context-menu.png" width="200" /></li>
 </ul>
 <h1 id="instellingen">Instellingen</h1>
+<h2 id="instellingen-toepassing-openen">Instellingen toepassing openen</h2>
+<ul>
+<li><p><code>SUPER+I</code></p></li>
+<li><p>Systeemmenu <img src="img/systeem-menu-gesloten.png" height="25" /> -&gt; <img src="img/instellingen-knop.png" height="25" /></p></li>
+<li><p><code>SUPER inst ENTER</code></p></li>
+</ul>
+<h2 id="donker-thema-inschakelen">Donker thema inschakelen</h2>
+<ul>
+<li>Instellingen -&gt; Weergave -&gt; Stijl -&gt; Donker</li>
+</ul>
+<figure>
+<img src="img/instellingen-weergave-stijl.png" width="400" alt="" /><figcaption>Weergave stijl</figcaption>
+</figure>
 <h2 id="schermvergrendeling-uitschakelen">Schermvergrendeling uitschakelen</h2>
 <ul>
 <li>Instellingen -&gt; Privacy -&gt; Scherm -&gt; Automatische schermvergrendeling</li>
@@ -448,16 +461,16 @@
 <figure>
 <img src="img/instellingen-privacy-scherm.png" width="400" alt="" /><figcaption>Schermvergrendeling in de instellingen toepassing</figcaption>
 </figure>
+<h2 id="nachtlicht">Nachtlicht</h2>
+<ul>
+<li><p>Via systeemmenu <img src="img/systeem-menu-gesloten.png" height="25" /></p></li>
+<li><p>Instellingen -&gt; Schermen -&gt; Nachtlicht</p></li>
+</ul>
 <h2 id="toegankelijkheid">Toegankelijkheid</h2>
 <ul>
 <li><p>Instellingen -&gt; Toegankelijkheid</p></li>
 <li><p>Menu in bovenbalk <img src="img/toegankelijkheidsmenu.png" width="30" /></p></li>
 <li><p>Grote letters</p></li>
-</ul>
-<h2 id="nachtlicht">Nachtlicht</h2>
-<ul>
-<li><p>Via systeemmenu <img src="img/systeem-menu-gesloten.png" height="25" /></p></li>
-<li><p>Instellingen -&gt; Schermen -&gt; Nachtlicht</p></li>
 </ul>
 <h2 id="speciale-tekens-invoeren">Speciale tekens invoeren</h2>
 <ul>
@@ -524,11 +537,10 @@
 <ul>
 <li><p>Instellingen -&gt; Online accounts -&gt; Google</p>
 <ul>
-<li><p>toon kalender</p></li>
-<li><p>drive</p></li>
+<li>drive</li>
 </ul></li>
 </ul>
-<p><strong>N.B.</strong> Microsoft account werkt <strong>niet</strong>.</p>
+<!-- __N.B.__ Microsoft account werkt **niet**. -->
 <h1 id="toepassingen-installeren">Toepassingen installeren</h1>
 <h2 id="updates-uitvoeren">Updates uitvoeren</h2>
 <ul>
