deploy: 775e2ea5ee9a151648d5a09dac6fe8749d3da121

--- a/samenvatting.html
+++ b/samenvatting.html
@@ -477,19 +477,44 @@
 <li><p>Samensteltoets</p></li>
 <li><p>Zoekvak</p></li>
 <li><p>Tekens en symbolen</p></li>
+<li><p>Unicode code <code>CTRL+SHIFT+U XXXX SPATIEBALK</code></p></li>
 </ul>
 <p>Zie vooral ook deze webpagina <a href="https://help.gnome.org/users/gnome-help/stable/tips-specialchars.html.nl"><em>GNOME tip speciale tekens</em></a></p>
 <h3 id="speciale-tekens-via-samensteltoets">Speciale tekens via samensteltoets</h3>
 <ul>
 <li><p>Instellingen -&gt; Toetsenbord -&gt; Invoer voor speciale tekens</p></li>
 <li><p>Samensteltoets op rechter alt zetten</p></li>
+<li><table>
+<thead>
+<tr class="header">
+<th style="text-align: center;">Teken</th>
+<th style="text-align: left;">Toetsencombinatie</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: center;">é</td>
+<td style="text-align: left;"><code>COMPOSE ' e</code></td>
+</tr>
+<tr class="even">
+<td style="text-align: center;">è</td>
+<td style="text-align: left;"><code>COMPOSE ` e</code></td>
+</tr>
+<tr class="odd">
+<td style="text-align: center;">ë</td>
+<td style="text-align: left;"><code>COMPOSE " e</code></td>
+</tr>
+<tr class="even">
+<td style="text-align: center;">ē</td>
+<td style="text-align: left;"><code>COMPOSE - e</code></td>
+</tr>
+<tr class="odd">
+<td style="text-align: center;">ê</td>
+<td style="text-align: left;"><code>COMPOSE ^ e</code></td>
+</tr>
+</tbody>
+</table></li>
 <li><p><a href="https://en.wikipedia.org/wiki/Compose_key#Common_compose_combinations"><em>Voor combinaties zie deze webpagina</em></a></p></li>
-<li><p>het euroteken € krijgt u door</p>
-<ul>
-<li><p><code>COMPOSE = c</code></p></li>
-<li><p><code>SUPER euro sign ↓ ENTER</code></p></li>
-<li><p><code>CTRL+SHIFT+u 20AC SPATIEBALK</code></p></li>
-</ul></li>
 </ul>
 <h3 id="speciale-tekens-via-het-zoekvak">Speciale tekens via het zoekvak</h3>
 <p>Voor invoeren via het zoekveld kunt de volgende namen gebruiken</p>
@@ -527,6 +552,12 @@
 <p><img src="img/tekens-symbolen-icon.png" width="60" /></p>
 <ul>
 <li><code>SUPER sym ENTER</code></li>
+</ul>
+<h3 id="het-euroteken-krijgt-u-door">het euroteken € krijgt u door</h3>
+<ul>
+<li><p><code>COMPOSE = c</code></p></li>
+<li><p><code>SUPER euro sign ↓ ENTER</code></p></li>
+<li><p><code>CTRL+SHIFT+u 20AC SPATIEBALK</code></p></li>
 </ul>
 <h2 id="gebruikers-instellingen">Gebruikers instellingen</h2>
 <ul>
